--- a/config/pom.xml
+++ b/config/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com.softfocus</groupId>
 	<artifactId>config</artifactId>
-	<version>1.0</version>
+	<version>2.0</version>
 	<name>config</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -65,7 +65,7 @@
 						<image>openjdk:15-jdk-slim-buster</image>
 					</from>
 					<to>
-						<image>softfocus/microservices-config:${version}</image>
+						<image>viniciusferrarini/${project.artifactId}:${project.version}</image>
 					</to>
 					<container>
 						<jvmFlags>
