--- a/properties/application.properties
+++ b/properties/application.properties
@@ -5,3 +5,7 @@ spring.main.allow-bean-definition-overriding=true
 
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
+
+#DOC
+springdoc.api-docs.path=/api-documentation
+springdoc.swagger-ui.path=/documentation
