--- a/properties/application.properties
+++ b/properties/application.properties
@@ -9,3 +9,7 @@ server.compression.mime-types=application/json,application/xml,text/html,text/xm
 #DOC
 springdoc.api-docs.path=/api-documentation
 springdoc.swagger-ui.path=/documentation
+
+# TRACING
+spring.sleuth.sampler.probability=100
+spring.zipkin.base-url=${ZIPKIN_URL:http://localhost:9411/}
