--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,12 +52,13 @@ services:
 
     produtos:
         container_name: produtos
-        image: viniciusferrarini/produtos:2.0
+        image: viniciusferrarini/produtos:2.1
         restart: always
         environment:
             CONFIG_SERVER_URL: 'http://config:8888'
             EUREKA_URL: 'http://discovery:8761/eureka/'
             JMS_URL: 'tcp://jms:61616'
+            ZIPKIN_URL: 'http://trace:9411/'
         ports:
             - 8081:8081
         depends_on:
