--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -100,3 +100,27 @@ services:
             - 9411:9411
         expose:
             - 9411
+
+    prometheus:
+        image: prom/prometheus:latest
+        container_name: monitoring_prometheus
+        restart: unless-stopped
+        command:
+            - --config.file=/etc/prometheus/prometheus.yml
+        volumes:
+            - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+        expose:
+            - 9090
+        ports:
+            - 9090:9090
+
+    grafana:
+        image: grafana/grafana:latest
+        container_name: monitoring_grafana
+        restart: unless-stopped
+        links:
+            - prometheus:prometheus
+        expose:
+            - 3000
+        ports:
+            - 3000:3000
