--- a/produtos/pom.xml
+++ b/produtos/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.3.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.gasparbarancelli</groupId>
+	<groupId>br.com.softfocus</groupId>
 	<artifactId>produtos</artifactId>
 	<version>1.0</version>
 	<name>produtos</name>
