--- a/properties/application.properties
+++ b/properties/application.properties
@@ -6,6 +6,9 @@ spring.main.allow-bean-definition-overriding=true
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
 
+# SECURITY
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${KEYCLOAK_HOST:host.docker.internal}:${KEYCLOAK_PORT:18080}/auth/realms/spring-micro-main
+
 #DOC
 springdoc.api-docs.path=/api-documentation
 springdoc.swagger-ui.path=/documentation
