--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,7 +65,7 @@ services:
             - config
             - discovery
             - jms
-            #- prometheus
+            - prometheus
 
     cupons:
         container_name: cupons
@@ -82,7 +82,7 @@ services:
         depends_on:
             - config
             - discovery
-            #- prometheus
+            - prometheus
 
     vendas:
         container_name: vendas
@@ -101,7 +101,7 @@ services:
             - config
             - discovery
             - jms
-            #- prometheus
+            - prometheus
 
     gateway:
         container_name: gateway
@@ -129,38 +129,38 @@ services:
             - 6161
             - 8161
 
-#    trace:
-#        container_name: trace
-#        image: openzipkin/zipkin
-#        restart: always
-#        ports:
-#            - 9411:9411
-#        expose:
-#            - 9411
-#
-#    prometheus:
-#        image: prom/prometheus:latest
-#        container_name: monitoring_prometheus
-#        restart: unless-stopped
-#        command:
-#            - --config.file=/etc/prometheus/prometheus.yml
-#        volumes:
-#            - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
-#        expose:
-#            - 9090
-#        ports:
-#            - 9090:9090
-#
-#    grafana:
-#        image: grafana/grafana:latest
-#        container_name: monitoring_grafana
-#        restart: unless-stopped
-#        links:
-#            - prometheus:prometheus
-#        expose:
-#            - 3000
-#        ports:
-#            - 3000:3000
+    trace:
+        container_name: trace
+        image: openzipkin/zipkin
+        restart: always
+        ports:
+            - 9411:9411
+        expose:
+            - 9411
+
+    prometheus:
+        image: prom/prometheus:latest
+        container_name: monitoring_prometheus
+        restart: unless-stopped
+        command:
+            - --config.file=/etc/prometheus/prometheus.yml
+        volumes:
+            - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+        expose:
+            - 9090
+        ports:
+            - 9090:9090
+
+    grafana:
+        image: grafana/grafana:latest
+        container_name: monitoring_grafana
+        restart: unless-stopped
+        links:
+            - prometheus:prometheus
+        expose:
+            - 3000
+        ports:
+            - 3000:3000
 
 #    logspout:
 #        image: gliderlabs/logspout:v3
