--- a/properties/cupons.properties
+++ b/properties/cupons.properties
@@ -4,3 +4,6 @@ server.port=8083
 # REDIS
 spring.redis.host=${REDIS_HOST:localhost}
 spring.redis.port=${REDIS_PORT:6379}
+
+# SECURITY
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${KEYCLOAK_HOST:localhost}:${KEYCLOAK_PORT:18080}/auth/realms/spring-micro-main
