--- a/properties/vendas.properties
+++ b/properties/vendas.properties
@@ -1,6 +1,9 @@
 # APP
 server.port=8082
 
+# SECURITY
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${KEYCLOAK_HOST:localhost}:${KEYCLOAK_PORT:18080}/auth/realms/spring-micro-main
+
 # DATASOURCE
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3307}/vendas
 spring.datasource.username=${MYSQL_USERNAME:vendas}
