--- a/properties/cupons.properties
+++ b/properties/cupons.properties
@@ -6,4 +6,4 @@ spring.redis.host=${REDIS_HOST:localhost}
 spring.redis.port=${REDIS_PORT:6379}
 
 # SECURITY
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${KEYCLOAK_HOST:localhost}:${KEYCLOAK_PORT:18080}/auth/realms/spring-micro-main
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${KEYCLOAK_HOST:host.docker.internal}:${KEYCLOAK_PORT:18080}/auth/realms/spring-micro-main
