--- a/properties/produtos.properties
+++ b/properties/produtos.properties
@@ -20,4 +20,4 @@ spring.activemq.user=admin
 spring.activemq.password=admin
 
 # SECURITY
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${KEYCLOAK_HOST:localhost}:${KEYCLOAK_PORT:18080}/auth/realms/spring-micro-main
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${KEYCLOAK_HOST:host.docker.internal}:${KEYCLOAK_PORT:18080}/auth/realms/spring-micro-main
