--- a/properties/gateway.yaml
+++ b/properties/gateway.yaml
@@ -12,7 +12,7 @@ eureka:
 
 
 keycloak-client:
-    server-url: http://host.docker.internal:18080/auth
+    server-url: http://127.0.0.1:18080/auth
     realm: spring-micro-main
 
 spring:
