--- a/properties/application.properties
+++ b/properties/application.properties
@@ -25,3 +25,6 @@ management.endpoints.enabled-by-default=false
 management.endpoint.info.enabled=true
 management.endpoint.prometheus.enabled=true
 spring.jpa.properties.hibernate.generate_statistics=true
+
+# SECURITY
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://${KEYCLOAK_HOST:keycloak}:${KEYCLOAK_PORT:18080}/auth/realms/spring-micro-main
